<resources>
    <string name="app_name">QR Scanner</string>
    <string name="shortcut_scan_from_camera">Scan</string>
    <string name="shortcut_scan_from_file">Scan image</string>
    <string name="shortcut_create_barcode">Create barcode</string>
    <string name="shortcut_history">History</string>
    <string name="intent_filter_create_qr_code_text">Create QR code</string>
    <string name="intent_filter_scan_image">Scan image</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_default_message">Something went wrong</string>
    <string name="error_dialog_positive_button_text">OK</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="dialog_delete_clear_history_message">Delete history?</string>
    <string name="dialog_delete_barcode_message">Delete?</string>
    <string name="dialog_confirm_barcode_title">Confirm</string>
    <string name="dialog_confirm_barcode_positive_button">OK</string>
    <string name="dialog_confirm_barcode_negative_button">Cancel</string>
    <string name="dialog_edit_barcode_name_title">Edit name</string>
    <string name="dialog_edit_barcode_name_positive_button">OK</string>
    <string name="dialog_edit_barcode_name_negative_button">Cancel</string>
    <string name="activity_bottom_tabs_scan_tab">Scan</string>
    <string name="activity_bottom_tabs_create_tab">Create</string>
    <string name="activity_bottom_tabs_history_tab">History</string>
    <string name="activity_bottom_tabs_settings_tab">Settings</string>
    <string name="fragment_scan_barcode_from_camera_scan_from_file">Scan image</string>
    <string name="fragment_scan_barcode_from_camera_flash">Flash</string>
    <string name="fragment_scan_barcode_from_camera_barcode_saved">Saved</string>
    <string name="activity_scan_barcode_from_file_title">Scan</string>
    <string name="activity_scan_barcode_from_file_scan">OK</string>
    <string name="activity_scan_barcode_from_file_rotate_left">Rotate left</string>
    <string name="activity_scan_barcode_from_file_rotate_right">Rotate right</string>
    <string name="activity_scan_barcode_from_file_change_image">Choose another image</string>
    <string name="fragment_create_barcode_title">Create</string>
    <string name="fragment_create_barcode_qr_code">QR code</string>
    <string name="fragment_create_barcode_qr_code_text">Text</string>
    <string name="fragment_create_qr_code_list_title">Create QR code</string>
    <string name="fragment_create_barcode_list_title">Create barcode</string>
    <string name="fragment_create_barcode_list_2d">2D barcodes</string>
    <string name="fragment_create_barcode_list_1d">1D barcodes</string>
    <string name="activity_create_barcode_menu_item_title">Create</string>
    <string name="activity_create_barcode_contacts_menu_item_title">Contacts</string>
    <string name="fragment_create_barcode_alternative">Alternatively:</string>
    <string name="fragment_create_qr_code_url_alternative">- Open your browser app\n- Load a website\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="fragment_create_qr_code_bookmark_title_hint">Title</string>
    <string name="fragment_create_qr_code_wifi_encryption_hint">Encryption</string>
    <string-array name="fragment_create_qr_code_wifi_encryption_types">
        <item>WPA/WPA2</item>
        <item>WEP</item>
        <item>None</item>
    </string-array>
    <string name="fragment_create_qr_code_wifi_network_name_hint">Network name</string>
    <string name="fragment_create_qr_code_wifi_password_hint">Password</string>
    <string name="fragment_create_qr_code_wifi_is_hidden_hint">Hidden</string>
    <string name="fragment_create_qr_code_email_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_email_message_hint">Message</string>
    <string name="fragment_create_qr_code_sms_message_hint">Message</string>
    <string name="fragment_create_qr_code_mms_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_mms_message_hint">Message</string>
    <string name="fragment_create_qr_code_cryptocurrency_type_hint">Cryptocurrency</string>
    <string-array name="fragment_create_qr_code_cryptocurrencies">
        <item>Bitcoin</item>
        <item>Bitcoin Cash</item>
        <item>Ethereum</item>
        <item>Litecoin</item>
        <item>Dash</item>
    </string-array>
    <string name="fragment_create_qr_code_cryptocurrency_address_hint">Receiver address</string>
    <string name="fragment_create_qr_code_cryptocurrency_amount_hint">Amount</string>
    <string name="fragment_create_qr_code_cryptocurrency_label_hint">Label</string>
    <string name="fragment_create_qr_code_cryptocurrency_message_hint">Message</string>
    <string name="fragment_create_qr_code_location_latitude_hint">Latitude</string>
    <string name="fragment_create_qr_code_location_longitude_hint">Longitude</string>
    <string name="fragment_create_qr_code_location_altitude_hint">Altitude (optional)</string>
    <string name="fragment_create_qr_code_otp_type_hint">Type</string>
    <string-array name="fragment_create_qr_code_otp_types">
        <item>HOTP</item>
        <item>TOTP</item>
    </string-array>
    <string name="fragment_create_qr_code_otp_algorithm_hint">Algorithm</string>
    <string-array name="fragment_create_qr_code_otp_algorithms">
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
    <string name="fragment_create_qr_code_otp_issuer_hint">Issuer</string>
    <string name="fragment_create_qr_code_otp_account_hint">Account</string>
    <string name="fragment_create_qr_code_otp_digits_hint">Digits</string>
    <string name="fragment_create_qr_code_otp_period_hint">Period</string>
    <string name="fragment_create_qr_code_otp_counter_hint">Counter</string>
    <string name="fragment_create_qr_code_otp_secret_hint">Secret</string>
    <string name="fragment_create_qr_code_otp_generate_random_secret">Random Secret</string>
    <string name="fragment_create_qr_code_event_title_hint">Title</string>
    <string name="fragment_create_qr_code_event_organizer_hint">Organizer</string>
    <string name="fragment_create_qr_code_event_summary_hint">Summary</string>
    <string name="fragment_create_qr_code_event_start_date_hint">Start date</string>
    <string name="fragment_create_qr_code_event_end_date_hint">End date</string>
    <string name="fragment_create_qr_code_contact_first_name_hint">First Name</string>
    <string name="fragment_create_qr_code_contact_last_name_hint">Last Name</string>
    <string name="fragment_create_qr_code_contact_organization_hint">Organization</string>
    <string name="fragment_create_qr_code_contact_job_hint">Job</string>
    <string name="fragment_create_qr_code_contact_email_hint">Email</string>
    <string name="fragment_create_qr_code_contact_phone_hint">Phone</string>
    <string name="fragment_create_qr_code_contact_fax_hint">Fax</string>
    <string name="fragment_create_qr_code_contact_country_hint">Country</string>
    <string name="fragment_create_qr_code_contact_region_hint">Region/State</string>
    <string name="fragment_create_qr_code_contact_postcode_hint">Postcode</string>
    <string name="fragment_create_qr_code_contact_city_hint">City</string>
    <string name="fragment_create_qr_code_contact_street_hint">Street</string>
    <string name="fragment_create_qr_code_contact_website_hint">Website</string>
    <string name="fragment_create_qr_code_contact_alternative">- Open your contacts app\n- Open an existing contact or create a new one\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="fragment_create_data_matrix_hint">Text without special characters</string>
    <string name="fragment_create_aztec_hint">Text without special characters</string>
    <string name="fragment_create_codabar_hint">Digits</string>
    <string name="fragment_create_code_39_hint">Text in upper case without special characters</string>
    <string name="fragment_create_code_93_hint">Text in upper case without special characters</string>
    <string name="fragment_create_code_128_hint">Text without special characters</string>
    <string name="fragment_create_ean_8_hint">7 digits</string>
    <string name="fragment_create_ean_13_hint">12 digits</string>
    <string name="fragment_create_itf_14_hint">Even number of digits</string>
    <string name="fragment_create_upc_a_hint">11 digits</string>
    <string name="fragment_create_upc_e_hint">7 digits</string>
    <string name="fragment_barcode_history_title">History</string>
    <string-array name="fragment_barcode_history_tab_titles">
        <item>All</item>
    </string-array>
    <string name="fragment_barcode_history_menu_title_delete_all">Clear history</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_appearance_settings">Appearance</string>
    <string name="fragment_settings_theme">Theme</string>
    <string name="fragment_settings_scanner_settings">Scanner</string>
    <string name="fragment_settings_simple_auto_focus">Simple auto focus mode</string>
    <string name="fragment_settings_camera">Camera</string>
    <string name="fragment_settings_history_settings">History</string>
    <string name="fragment_settings_clear_history">Clear history</string>
    <string name="fragment_settings_about">About</string>
    <string name="fragment_settings_app_version">App version</string>
    <string name="activity_choose_theme_title">Theme</string>
    <string name="activity_choose_theme_system">Same as system</string>
    <string name="activity_choose_theme_light">Light</string>
    <string name="activity_choose_theme_dark">Dark</string>
    <string name="activity_choose_camera_title">Camera</string>
    <string name="activity_choose_camera_front">Front</string>
    <string name="activity_choose_camera_back">Back</string>
    <string name="activity_barcode_add_to_calendar">Add to calendar</string>
    <string name="activity_barcode_add_to_contacts">Add to contacts</string>
    <string name="activity_barcode_call_phone">Call %s</string>
    <string name="activity_barcode_send_sms">Send SMS/MMS to %s</string>
    <string name="activity_barcode_send_email">Email to %s</string>
    <string name="activity_barcode_show_location">Show location</string>
    <string name="activity_barcode_connect_to_wifi">Connect to Wi-Fi</string>
    <string name="activity_barcode_open_wifi_settings">Open Wi-Fi settings</string>
    <string name="activity_barcode_copy_network_name">Copy network name</string>
    <string name="activity_barcode_copy_network_password">Copy network password</string>
    <string name="activity_barcode_open_app">Open app</string>
    <string name="activity_barcode_open_in_app_market">Open in market</string>
    <string name="activity_barcode_open_in_youtube">Open in Youtube</string>
    <string name="activity_barcode_save_bookmark">Save to bookmarks</string>
    <string name="activity_barcode_open_link">Open link</string>
    <string name="activity_barcode_open_bitcoin_url">Open in other app</string>
    <string name="activity_barcode_show_otp">Show password</string>
    <string name="activity_barcode_open_otp">Open in other app</string>
    <string name="activity_barcode_share_as_text">Share as text</string>
    <string name="activity_barcode_copy">Copy to clipboard</string>
    <string name="activity_barcode_save_as_text">Save as text</string>
    <string name="activity_barcode_search">Search on the web</string>
    <string name="activity_barcode_show_barcode_image">View code</string>
    <string name="activity_barcode_share_as_image">Share as image</string>
    <string name="activity_barcode_save_as_image">Save as image</string>
    <string name="activity_barcode_delete">Delete</string>
    <string name="barcode_schema_url">URL</string>
</resources>