<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayoutStyle"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/fragment_create_barcode_title"
            style="@style/ToolbarStyle"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        style="@style/ScrollStyle"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin_small"
            android:orientation="vertical"
            >

            <!--QR code-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin_medium2"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/fragment_create_barcode_qr_code"
                style="@style/CreateBarcodeGroupTitleTextViewStyle"
                />
            <com.example.barcodescanner.feature.common.view.IconButtonWithDelimiter
                android:id="@+id/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_text"
                app:iconBackground="@color/orange1"
                app:text="@string/fragment_create_barcode_qr_code_text"
                />
            <com.example.barcodescanner.feature.common.view.IconButtonWithDelimiter
                android:id="@+id/button_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_link"
                app:iconBackground="@color/orange1"
                app:text="@string/barcode_schema_url"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>